dentists api ready
